# SigilDERG-Lambda-Package

./: .gitignore  .pre-commit-config.yaml  CODE_INDEX.md  README.md  SECURITY.md  apply.txt  constraints.txt  eval_setup.sh  eval_setup_config.sh  eval_setup_readme.md  pyproject.toml  requirements.in
.github/workflows/: ci.yml
docs/: CHANGE_REPORT_2025-01.md  RULE_ZERO_APPROACH.md
docs/adr/: ADR-001-firejail-first-sandboxing.md  ADR-002-ecosystem-orchestration.md  ADR-003-reproducibility-guarantees.md  README.md  template.md
docs/runbooks/: README.md  customization.md  evaluation-execution.md  troubleshooting.md
lib/: cli_tools.sh  environment.sh  evaluation.sh  logging.sh  python_env.sh  pytorch.sh  rust.sh  sandbox.sh  sigilderg.sh  system_deps.sh  tmux.sh
scripts/: evaluate_humaneval.py  validate_ecosystem.py
tests/: conftest.bash  test_config.bats  test_environment.bats  test_evaluate_humaneval.py  test_logging.bats
